[package]
name = "rust_basics"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = { version = "1.17.0", optional = true }
solana-client = { version = "1.17.0", optional = true }
shellexpand = { version = "3.1.0", optional = true }

[features]
solana = ["dep:solana-sdk", "dep:solana-client", "dep:shellexpand"]
